--- a/README
+++ b/README
@@ -13,7 +13,8 @@ https://docs.python.org/3.4/index.html#
 MongoDB 2.6 docs:
 http://docs.mongodb.org/manual/
 
-TTD Methodology explained:
-http://en.wikipedia.org/wiki/Test-driven_development
 
-Packages used include:
+Packages used include (http://www.lfd.uci.edu/~gohlke/pythonlibs/):
+PyOpenGL
+NumPy
+PyQT4
