Quick blurb in he README, should be expounded on later

--- a/README
+++ b/README
@@ -5,6 +5,9 @@
  */
 
 
+ Chechnya Adventures is a roguelike action adventure role play game set in the dissonant state of Chechnya. The player must survive the harsh realities of a wartorn nation.
+
+
 References for developers:
 
 Python 3.4.1 docs:
