--- a/README
+++ b/README
@@ -5,7 +5,7 @@
  */
 
 
- Chechnya Adventures is a roguelike action adventure role play game set in the dissonant state of Chechnya. The player must survive the harsh realities of a wartorn nation.
+Adventures is a roguelike action adventure role play game set in the dissonant state of Chechnya. The player must survive the harsh realities of a wartorn nation.
 
 
 References for developers:
